--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,7 @@ spring:
     password: ${spring.datasource.password}
 
 fio:
+  url: https://rest.fnar.net
   blacklist:
     - /admin/**
+    - /auth/**
